--- a/src/components/navContainer/navbar.component.css
+++ b/src/components/navContainer/navbar.component.css
@@ -4,3 +4,12 @@
    width: 100%;
    border-radius: 25px;
 }
+.header_nav
+{
+   height: 20%;
+   width: 100%;
+   padding: 20px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
