--- a/src/components/navContainer/navbar.component.css
+++ b/src/components/navContainer/navbar.component.css
@@ -6,10 +6,40 @@
 }
 .header_nav
 {
-   height: 20%;
+   height: 15%;
    width: 100%;
-   padding: 20px;
    display: flex;
    justify-content: space-between;
-   align-items: center;
 }
+.routes
+{
+   display: flex;
+   gap: 2em;
+   margin-top: 15px;
+   margin-left: 15px;
+}
+a
+{
+   color: black;
+   text-decoration: none;
+}
+.auth_nav
+{
+   display: flex;
+   gap: 2em;
+   margin-top: 15px;
+   margin-right: 15px;
+}
+.header_content
+{
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content:space-between ;
+   background-image: url("../../assets/result.png");
+   height: 85%;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: contain;
+}
+
